o Explicitly set heap/permgen memory for surefire's VM